--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,6 +65,536 @@
     "r1 = Solution()\n",
     "print(r1.singleNumber(nums2))\n",
     "print(r1.singleNumber(nums1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 2 - Happy Number\n",
+    "Write an algorithm to determine if a number is \"happy\".\n",
+    "\n",
+    "A happy number is a number defined by the following process: Starting with any positive integer, replace the number by the sum of the squares of its digits, and repeat the process until the number equals 1 (where it will stay), or it loops endlessly in a cycle which does not include 1. Those numbers for which this process ends in 1 are happy numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "608%10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(608/10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "Input: 19\n",
+    "Output: true\n",
+    "Explanation: \n",
+    "12 + 92 = 82\n",
+    "82 + 22 = 68\n",
+    "62 + 82 = 100\n",
+    "12 + 02 + 02 = 1\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "class Solution(object):\n",
+    "\n",
+    "        \n",
+    "    def isHappy(self, n):\n",
+    "        \"\"\"\n",
+    "        :type n: int\n",
+    "        :rtype: bool\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        def squaresum(num):\n",
+    "            sqSUM = 0\n",
+    "            while(num > 0):\n",
+    "                sqSUM += (num % 10)*(num % 10)\n",
+    "                num = num//10\n",
+    "            return sqSUM\n",
+    "        \n",
+    "        seen = set()\n",
+    "        while squaresum(n) not in seen:\n",
+    "            sum1 = squaresum(n)\n",
+    "            if sum1 == 1:\n",
+    "                return True\n",
+    "            else:\n",
+    "                seen.add(sum1)\n",
+    "                n = sum1\n",
+    "        return False\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "nums1 = 13\n",
+    "nums2 = 19\n",
+    " \n",
+    "r1 = Solution()\n",
+    "print(r1.isHappy(nums2))\n",
+    "print(r1.isHappy(nums1))   \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 3 - Maximum Subarray \n",
+    "Given an integer array nums, find the contiguous subarray (containing at least one number) which has the largest sum and return its sum."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Example:\n",
+    "\n",
+    "Input: [-2,1,-3,4,-1,2,1,-5,4],\n",
+    "Output: 6\n",
+    "Explanation: [4,-1,2,1] has the largest sum = 6.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def maxSubArray(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        total_sum = max_sum = nums[0]\n",
+    "        \n",
+    "        for i in nums[1:]:\n",
+    "            total_sum = max(i, total_sum + i)\n",
+    "            max_sum = max(total_sum, max_sum)\n",
+    "        \n",
+    "        return max_sum\n",
+    "\n",
+    "\n",
+    "nums1 = [-2,1,-3,4,-1,2,1,-5,4]\n",
+    "nums2 = [4,1,2,1,2]\n",
+    " \n",
+    "r1 = Solution()\n",
+    "print(r1.maxSubArray(nums2))\n",
+    "print(r1.maxSubArray(nums1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 4 - Move Zeroes\n",
+    "Given an array nums, write a function to move all 0's to the end of it while maintaining the relative order of the non-zero elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 12, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Example:\n",
+    "\n",
+    "Input: [0,1,0,3,12]\n",
+    "Output: [1,3,12,0,0]\n",
+    "Note:\n",
+    "\n",
+    "You must do this in-place without making a copy of the array.\n",
+    "Minimize the total number of operations.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def moveZeroes(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: None Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        i = 0 \n",
+    "        for j in range(len(nums)):\n",
+    "            if nums[j] != 0:\n",
+    "                nums[i], nums[j] = nums[j], nums[i]\n",
+    "                i = i + 1\n",
+    "        return nums\n",
+    "                \n",
+    "nums1 = [0,1,0,3,12]\n",
+    " \n",
+    "r1 = Solution()\n",
+    "print(r1.moveZeroes(nums1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 5 - Best Time to Buy and Sell Stock II\n",
+    "\n",
+    "Say you have an array for which the ith element is the price of a given stock on day i.\n",
+    "\n",
+    "Design an algorithm to find the maximum profit. You may complete as many transactions as you like (i.e., buy one and sell one share of the stock multiple times).\n",
+    "\n",
+    "Note: You may not engage in multiple transactions at the same time (i.e., you must sell the stock before you buy again)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "4\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Example 1:\n",
+    "\n",
+    "Input: [7,1,5,3,6,4]\n",
+    "Output: 7\n",
+    "Explanation: Buy on day 2 (price = 1) and sell on day 3 (price = 5), profit = 5-1 = 4.\n",
+    "             Then buy on day 4 (price = 3) and sell on day 5 (price = 6), profit = 6-3 = 3.\n",
+    "Example 2:\n",
+    "\n",
+    "Input: [1,2,3,4,5]\n",
+    "Output: 4\n",
+    "Explanation: Buy on day 1 (price = 1) and sell on day 5 (price = 5), profit = 5-1 = 4.\n",
+    "             Note that you cannot buy on day 1, buy on day 2 and sell them later, as you are\n",
+    "             engaging multiple transactions at the same time. You must sell before buying again.\n",
+    "Example 3:\n",
+    "\n",
+    "Input: [7,6,4,3,1]\n",
+    "Output: 0\n",
+    "Explanation: In this case, no transaction is done, i.e. max profit = 0.\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def maxProfit(self, prices):\n",
+    "        \"\"\"\n",
+    "        :type prices: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        profit = 0\n",
+    "        for i in range(1, len(prices)):\n",
+    "            if prices[i] - prices[i-1] > 0:\n",
+    "                profit += (prices[i] - prices[i-1])\n",
+    "        return profit\n",
+    "    \n",
+    "    \n",
+    "nums1 = [7,1,5,3,6,4]\n",
+    "nums2 = [1,2,3,4,5]\n",
+    "nums3 = [7,6,4,3,1]\n",
+    " \n",
+    "r1 = Solution()\n",
+    "print(r1.maxProfit(nums1))\n",
+    "print(r1.maxProfit(nums2))\n",
+    "print(r1.maxProfit(nums3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 6 - Group Anagrams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sort the word from strs:  aet\n",
+      "['eat']\n",
+      "Sort the word from strs:  aet\n",
+      "Sort the word from strs:  ant\n",
+      "['tan']\n",
+      "Sort the word from strs:  aet\n",
+      "Sort the word from strs:  ant\n",
+      "Sort the word from strs:  abt\n",
+      "['bat']\n",
+      "\n",
+      "\n",
+      " [['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Given an array of strings, group anagrams together.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: [\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"],\n",
+    "Output:\n",
+    "[\n",
+    "  [\"ate\",\"eat\",\"tea\"],\n",
+    "  [\"nat\",\"tan\"],\n",
+    "  [\"bat\"]\n",
+    "]\n",
+    "Note:\n",
+    "\n",
+    "All inputs will be in lowercase.\n",
+    "The order of your output does not matter.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def groupAnagrams(self, strs):\n",
+    "        \"\"\"\n",
+    "        :type strs: List[str]\n",
+    "        :rtype: List[List[str]]\n",
+    "        \"\"\"\n",
+    "        dict = {}\n",
+    "        \n",
+    "        for word in strs:\n",
+    "            \n",
+    "            sortedword = \"\".join(sorted(word))\n",
+    "            print(\"Sort the word from strs: \", sortedword)\n",
+    "\n",
+    "            if sortedword not in dict:\n",
+    "                dict[sortedword] = [word]\n",
+    "                print(dict[sortedword])\n",
+    "                \n",
+    "            else:\n",
+    "                dict[sortedword].append(word)\n",
+    "            \n",
+    "        result = []\n",
+    "        for item in dict.values():\n",
+    "            result.append(item)\n",
+    "        return result\n",
+    "\n",
+    "    \n",
+    "nums1 = [\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"]\n",
+    "r1 = Solution()\n",
+    "print(\"\\n\\n\",r1.groupAnagrams(nums1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 7 - Counting Elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 3: 2, 2: 1, 5: 1, 0: 1}\n",
+      "dict_items([(1, 1), (3, 2), (2, 1), (5, 1), (0, 1)])\n",
+      "3\n",
+      "{1: 1, 3: 2, 2: 1, 5: 1, 0: 1}\n",
+      "dict_items([(1, 1), (3, 2), (2, 1), (5, 1), (0, 1)])\n",
+      "\n",
+      "\n",
+      " 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Given an integer array arr, count element x such that x + 1 is also in arr.\n",
+    "\n",
+    "If there're duplicates in arr, count them seperately.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: arr = [1,2,3]\n",
+    "Output: 2\n",
+    "Explanation: 1 and 2 are counted cause 2 and 3 are in arr.\n",
+    "Example 2:\n",
+    "\n",
+    "Input: arr = [1,1,3,3,5,5,7,7]\n",
+    "Output: 0\n",
+    "Explanation: No numbers are counted, cause there's no 2, 4, 6, or 8 in arr.\n",
+    "Example 3:\n",
+    "\n",
+    "Input: arr = [1,3,2,3,5,0]\n",
+    "Output: 3\n",
+    "Explanation: 0, 1 and 2 are counted cause 1, 2 and 3 are in arr.\n",
+    "Example 4:\n",
+    "\n",
+    "Input: arr = [1,1,2,2]\n",
+    "Output: 2\n",
+    "Explanation: Two 1s are counted cause 2 is in arr.\n",
+    " \n",
+    "\n",
+    "Constraints:\n",
+    "\n",
+    "1 <= arr.length <= 1000\n",
+    "0 <= arr[i] <= 1000\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "arr = [1,3,2,3,5,0]\n",
+    "\n",
+    "numCount = {}\n",
+    "\n",
+    "for num in arr:\n",
+    "    numCount[num] = numCount.get(num, 0) + 1\n",
+    "\n",
+    "print(numCount)\n",
+    "print(numCount.items())\n",
+    "\n",
+    "total = 0\n",
+    "for num, count in numCount.items():\n",
+    "    if num + 1 in numCount:\n",
+    "        total += count\n",
+    "\n",
+    "print(total)\n",
+    " \n",
+    "\n",
+    "    \n",
+    "class Solution(object):\n",
+    "    def countElements(self, arr):\n",
+    "        \"\"\"\n",
+    "        :type arr: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        numCount = {}\n",
+    "\n",
+    "        for num in arr:\n",
+    "            numCount[num] = numCount.get(num, 0) + 1\n",
+    "\n",
+    "        print(numCount)\n",
+    "        print(numCount.items())\n",
+    "\n",
+    "        totalCount = 0\n",
+    "        for num, count in numCount.items():\n",
+    "            if num + 1 in numCount:\n",
+    "                totalCount += count\n",
+    "        \n",
+    "        return totalCount\n",
+    "    \n",
+    "\n",
+    "r1 = Solution()\n",
+    "print(\"\\n\\n\",r1.countElements(arr))"
    ]
   },
   {
