--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -554,22 +554,22 @@
     "\n",
     "arr = [1,3,2,3,5,0]\n",
     "\n",
-    "numCount = {}\n",
+    "# numCount = {}\n",
     "\n",
-    "for num in arr:\n",
-    "    numCount[num] = numCount.get(num, 0) + 1\n",
+    "# for num in arr:\n",
+    "#     numCount[num] = numCount.get(num, 0) + 1\n",
     "\n",
-    "print(numCount)\n",
-    "print(numCount.items())\n",
+    "# print(numCount)\n",
+    "# print(numCount.items())\n",
     "\n",
-    "total = 0\n",
-    "for num, count in numCount.items():\n",
-    "    if num + 1 in numCount:\n",
-    "        total += count\n",
+    "# total = 0\n",
+    "# for num, count in numCount.items():\n",
+    "#     if num + 1 in numCount:\n",
+    "#         total += count\n",
     "\n",
-    "print(total)\n",
+    "# print(total)\n",
     " \n",
-    "\n",
+    "arr = [1,3,2,3,5,0]\n",
     "    \n",
     "class Solution(object):\n",
     "    def countElements(self, arr):\n",
@@ -603,6 +603,367 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 8 - Middle of the Linked List\n",
+    "- Given a non-empty, singly linked list with head node head, return a middle node of linked list.\n",
+    "- If there are two middle nodes, return the second middle node."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "Given a non-empty, singly linked list with head node head, return a middle node of linked list.\n",
+    "\n",
+    "If there are two middle nodes, return the second middle node.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: [1,2,3,4,5]\n",
+    "Output: Node 3 from this list (Serialization: [3,4,5])\n",
+    "The returned node has value 3.  (The judge's serialization of this node is [3,4,5]).\n",
+    "Note that we returned a ListNode object ans, such that:\n",
+    "ans.val = 3, ans.next.val = 4, ans.next.next.val = 5, and ans.next.next.next = NULL.\n",
+    "Example 2:\n",
+    "\n",
+    "Input: [1,2,3,4,5,6]\n",
+    "Output: Node 4 from this list (Serialization: [4,5,6])\n",
+    "Since the list has two middle nodes with values 3 and 4, we return the second one.\n",
+    " \n",
+    "\n",
+    "Note:\n",
+    "\n",
+    "The number of nodes in the given list will be between 1 and 100.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "# Definition for singly-linked list.\n",
+    "# class ListNode(object):\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.next = None\n",
+    "\n",
+    "class Solution(object):\n",
+    "    \n",
+    "        \n",
+    "    def middleNode(self, head):\n",
+    "        \"\"\"\n",
+    "        :type head: ListNode\n",
+    "        :rtype: ListNode\n",
+    "        \"\"\"\n",
+    "        fast = slow = head\n",
+    "        while fast and fast.next:\n",
+    "            fast, slow = fast.next.next, slow.next\n",
+    "        return slow\n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "\n",
+    "# head1 = [1,2,3,4,5]\n",
+    "\n",
+    "# r1 = Solution()\n",
+    "\n",
+    "# print(r1.middleNode(head1))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6 // 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# curr = head # we use this for iterating through out the linked list\n",
+    "# count = 0\n",
+    "# while(curr): # while there is a node\n",
+    "#     count += 1\n",
+    "#     curr = curr.next\n",
+    "# mid = count // 2\n",
+    "\n",
+    "# curr = head\n",
+    "# for i in range(mid):\n",
+    "#     curr = curr.next\n",
+    "# return curr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 9 - Backspace String Compare\n",
+    "- Given two strings S and T, return if they are equal when both are typed into empty text editors. # means a backspace character."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Given two strings S and T, return if they are equal when both are typed into empty text editors. # means a backspace character.\n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: S = \"ab#c\", T = \"ad#c\"\n",
+    "Output: true\n",
+    "Explanation: Both S and T become \"ac\".\n",
+    "Example 2:\n",
+    "\n",
+    "Input: S = \"ab##\", T = \"c#d#\"\n",
+    "Output: true\n",
+    "Explanation: Both S and T become \"\".\n",
+    "Example 3:\n",
+    "\n",
+    "Input: S = \"a##c\", T = \"#a#c\"\n",
+    "Output: true\n",
+    "Explanation: Both S and T become \"c\".\n",
+    "Example 4:\n",
+    "\n",
+    "Input: S = \"a#c\", T = \"b\"\n",
+    "Output: false\n",
+    "Explanation: S becomes \"c\" while T becomes \"b\".\n",
+    "Note:\n",
+    "\n",
+    "1 <= S.length <= 200\n",
+    "1 <= T.length <= 200\n",
+    "S and T only contain lowercase letters and '#' characters.\n",
+    "Follow up:\n",
+    "\n",
+    "Can you solve it in O(N) time and O(1) space?\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def backspaceCompare(self, S, T):\n",
+    "        \"\"\"\n",
+    "        :type S: str\n",
+    "        :type T: str\n",
+    "        :rtype: bool\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        a = []\n",
+    "        b = []\n",
+    "        \n",
+    "        for i in range(len(S)):\n",
+    "            if (S[i] != '#'):\n",
+    "                a.append(S[i])\n",
+    "            else:\n",
+    "                if (a != []):\n",
+    "                    a.pop()\n",
+    "                \n",
+    "        for j in range(len(T)):\n",
+    "            if (T[j] != '#'):\n",
+    "                b.append(T[j])\n",
+    "            else:\n",
+    "                if (b != []):\n",
+    "                    b.pop()\n",
+    "                \n",
+    "        return a == b\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "r1 = Solution()\n",
+    "S1 = \"a##c\"\n",
+    "T1 = \"#a#c\"\n",
+    "\n",
+    "print(r1.backspaceCompare(S1, T1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 10 - Min Stack\n",
+    "- Design a stack that supports push, pop, top, and retrieving the minimum element in constant time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Design a stack that supports push, pop, top, and retrieving the minimum element in constant time.\n",
+    "\n",
+    "push(x) -- Push element x onto stack.\n",
+    "pop() -- Removes the element on top of the stack.\n",
+    "top() -- Get the top element.\n",
+    "getMin() -- Retrieve the minimum element in the stack.\n",
+    " \n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "MinStack minStack = new MinStack();\n",
+    "minStack.push(-2);\n",
+    "minStack.push(0);\n",
+    "minStack.push(-3);\n",
+    "minStack.getMin();   --> Returns -3.\n",
+    "minStack.pop();\n",
+    "minStack.top();      --> Returns 0.\n",
+    "minStack.getMin();   --> Returns -2.\n",
+    " \n",
+    "\n",
+    "\n",
+    "Note: Firt In Last Out\n",
+    "\n",
+    "-3\n",
+    " 0\n",
+    "-2\n",
+    "\n",
+    "[-2 0 -3]\n",
+    "getMin() -- > Returns -3\n",
+    "[-2 0] <--.pop() --> Returns -3 and takes -3 out from stack\n",
+    ".top();      --> Returns 0.\n",
+    ".getMin();   --> Returns -2.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "class MinStack(object):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        initialize your data structure here.\n",
+    "        \"\"\"\n",
+    "        self.stack = []\n",
+    "        self.minVal = float(\"inf\")\n",
+    "        \n",
+    "\n",
+    "    def push(self, x):\n",
+    "        \"\"\"\n",
+    "        :type x: int\n",
+    "        :rtype: None\n",
+    "        \"\"\"\n",
+    "        self.stack.append(x)\n",
+    "        if (x < self.minVal):\n",
+    "            self.minVal = x\n",
+    "            \n",
+    "            \n",
+    "    def updateMin(self):\n",
+    "        newMin = float(\"inf\")\n",
+    "        for item in self.stack:\n",
+    "            if (item < newMin):\n",
+    "                newMin = item\n",
+    "        self.minVal = newMin\n",
+    "        \n",
+    "\n",
+    "    def pop(self):\n",
+    "        \"\"\"\n",
+    "        :rtype: None\n",
+    "        \"\"\"\n",
+    "        item =  self.stack.pop()\n",
+    "        if (item == self.minVal):\n",
+    "            self.updateMin()\n",
+    "        return item \n",
+    "\n",
+    "    def top(self):\n",
+    "        \"\"\"\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        return self.stack[-1]\n",
+    "        \n",
+    "\n",
+    "    def getMin(self):\n",
+    "        \"\"\"\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        return self.minVal\n",
+    "        \n",
+    "\n",
+    "\n",
+    "# Your MinStack object will be instantiated and called as such:\n",
+    "obj = MinStack()\n",
+    "obj.push(0)\n",
+    "obj.push(-2)\n",
+    "obj.push(4)\n",
+    "obj.push(5)\n",
+    "obj.pop()\n",
+    "param_3 = obj.top()\n",
+    "print(param_3)\n",
+    "param_4 = obj.getMin()\n",
+    "print(param_4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
