--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -964,6 +964,89 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 11 - Diameter of Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Given a binary tree, you need to compute the length of the diameter of the tree. \n",
+    "The diameter of a binary tree is the length of the longest path between any two nodes in a tree. \n",
+    "This path may or may not pass through the root.\n",
+    "\n",
+    "Example:\n",
+    "Given a binary tree\n",
+    "          1\n",
+    "         / \\\n",
+    "        2   3\n",
+    "       / \\     \n",
+    "      4   5    \n",
+    "Return 3, which is the length of the path [4,2,1,3] or [5,2,1,3].\n",
+    "\n",
+    "Note: The length of path between two nodes is represented by the number of edges between them.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode(object):\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.left = None\n",
+    "#         self.right = None\n",
+    "\n",
+    "class Solution(object):\n",
+    "    \n",
+    "    def height(self, root):\n",
+    "        if root is None:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return 1 + max(self.height(root.left), self.height(root.right))\n",
+    "    \n",
+    "        \n",
+    "    def diameterOfBinaryTree(self, root):\n",
+    "        \"\"\"\n",
+    "        :type root: TreeNode\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        if root is None:\n",
+    "            return 0\n",
+    "        lheight = self.height(root.left)\n",
+    "        rheight = self.height(root.right)\n",
+    "        \n",
+    "        ldiameter = self.diameterOfBinaryTree(root.left)\n",
+    "        rdiameter = self.diameterOfBinaryTree(root.right)\n",
+    "        \n",
+    "        return max(lheight + rheight, max(ldiameter, rdiameter))\n",
+    "\n",
+    "    \n",
+    "# r1 = Solution()\n",
+    "# root = [3, 4, 5, 6, 9, 1, 3]\n",
+    "# print(r1.diameterOfBinaryTree(root))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
