--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -1047,6 +1047,120 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 12 - Last Stone Weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "We have a collection of stones, each stone has a positive integer weight.\n",
+    "\n",
+    "Each turn, we choose the two heaviest stones and smash them together.  Suppose the stones have weights x and y with x <= y.  The result of this smash is:\n",
+    "\n",
+    "If x == y, both stones are totally destroyed;\n",
+    "If x != y, the stone of weight x is totally destroyed, and the stone of weight y has new weight y-x.\n",
+    "At the end, there is at most 1 stone left.  Return the weight of this stone (or 0 if there are no stones left.)\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: [2,7,4,1,8,1]\n",
+    "Output: 1\n",
+    "Explanation: \n",
+    "We combine 7 and 8 to get 1 so the array converts to [2,4,1,1,1] then,\n",
+    "we combine 2 and 4 to get 2 so the array converts to [2,1,1,1] then,\n",
+    "we combine 2 and 1 to get 1 so the array converts to [1,1,1] then,\n",
+    "we combine 1 and 1 to get 0 so the array converts to [1] then that's the value of last stone.\n",
+    " \n",
+    "\n",
+    "Note:\n",
+    "\n",
+    "1 <= stones.length <= 30\n",
+    "1 <= stones[i] <= 1000\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def lastStoneWeight(self, stones):\n",
+    "        \"\"\"\n",
+    "        :type stones: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        while len(stones) > 1:\n",
+    "            stones.sort()\n",
+    "            if stones[-1] == stones[-2]:\n",
+    "                stones = stones[:-2]\n",
+    "            else: \n",
+    "                stones[-2] = stones[-1] - stones[-2]\n",
+    "                stones = stones[:-1]\n",
+    "           \n",
+    "        if len(stones) == 1:\n",
+    "            return stones[0]\n",
+    "        else:\n",
+    "            return 0\n",
+    "        \n",
+    "r1 = Solution()\n",
+    "stones = [2,7,4,1,8,1]\n",
+    "print(r1.lastStoneWeight(stones))    \n",
+    "\n",
+    "\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def lastStoneWeight(self, stones):\n",
+    "        \"\"\"\n",
+    "        :type stones: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        stones = [-i for i in stones]\n",
+    "        heapq.heapify(stones)\n",
+    "        \n",
+    "        while len(stones) > 1:\n",
+    "            first_h_stone = abs(heapq.heappop(stones))\n",
+    "            second_h_stone = abs(heapq.heappop(stones))\n",
+    "            \n",
+    "            if first_h_stone != second_h_stone:\n",
+    "                heapq.heappush(stones, -abs(first_h_stone - second_h_stone))\n",
+    "                \n",
+    "        if len(stones):\n",
+    "            return abs(stones[0])\n",
+    "        else:\n",
+    "            return 0\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
