--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -1161,6 +1161,174 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 13 - Contiguous Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Given a binary array, find the maximum length of a contiguous subarray with equal number of 0 and 1.\n",
+    "\n",
+    "Example 1:\n",
+    "Input: [0,1]\n",
+    "Output: 2\n",
+    "Explanation: [0, 1] is the longest contiguous subarray with equal number of 0 and 1.\n",
+    "Example 2:\n",
+    "Input: [0,1,0]\n",
+    "Output: 2\n",
+    "Explanation: [0, 1] (or [1, 0]) is a longest contiguous subarray with equal number of 0 and 1.\n",
+    "Note: The length of the given binary array will not exceed 50,000.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def findMaxLength(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        dict = {0 : -1}\n",
+    "        subarr, count = 0, 0\n",
+    "        \n",
+    "        for i in range(len(nums)):\n",
+    "            if nums[i] == 1:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                count += -1\n",
+    "            if count in dict:\n",
+    "                subarr = max(subarr, i - dict[count])\n",
+    "            else:\n",
+    "                dict[count] = i\n",
+    "        return subarr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 14 - Perform String Shifts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "You are given a string s containing lowercase English letters, and a matrix shift, where shift[i] = [direction, amount]:\n",
+    "\n",
+    "direction can be 0 (for left shift) or 1 (for right shift). \n",
+    "amount is the amount by which string s is to be shifted.\n",
+    "A left shift by 1 means remove the first character of s and append it to the end.\n",
+    "Similarly, a right shift by 1 means remove the last character of s and add it to the beginning.\n",
+    "Return the final string after all operations.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: s = \"abc\", shift = [[0,1],[1,2]]\n",
+    "Output: \"cab\"\n",
+    "Explanation: \n",
+    "[0,1] means shift to left by 1. \"abc\" -> \"bca\"\n",
+    "[1,2] means shift to right by 2. \"bca\" -> \"cab\"\n",
+    "Example 2:\n",
+    "\n",
+    "Input: s = \"abcdefg\", shift = [[1,1],[1,1],[0,2],[1,3]]\n",
+    "Output: \"efgabcd\"\n",
+    "Explanation:  \n",
+    "[1,1] means shift to right by 1. \"abcdefg\" -> \"gabcdef\"\n",
+    "[1,1] means shift to right by 1. \"gabcdef\" -> \"fgabcde\"\n",
+    "[0,2] means shift to left by 2. \"fgabcde\" -> \"abcdefg\"\n",
+    "[1,3] means shift to right by 3. \"abcdefg\" -> \"efgabcd\"\n",
+    " \n",
+    "\n",
+    "Constraints:\n",
+    "\n",
+    "1 <= s.length <= 100\n",
+    "s only contains lower case English letters.\n",
+    "1 <= shift.length <= 100\n",
+    "shift[i].length == 2\n",
+    "0 <= shift[i][0] <= 1\n",
+    "0 <= shift[i][1] <= 100\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def stringShift(self, s, shift):\n",
+    "        \"\"\"\n",
+    "        :type s: str\n",
+    "        :type shift: List[List[int]]\n",
+    "        :rtype: str\n",
+    "        \"\"\"\n",
+    "        if not s:\n",
+    "            return ''\n",
+    "        \n",
+    "        for direction, move in shift:\n",
+    "            move = move % len(s)\n",
+    "            \n",
+    "            if direction == 0:\n",
+    "                s = s[move:] + s[:move]\n",
+    "            else:\n",
+    "                s = s[-move:] + s[:-move]\n",
+    "        \n",
+    "        return s\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
