--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -1329,6 +1329,68 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 15 - Product of Array Except Self"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Given an array nums of n integers where n > 1,  return an array output such that output[i] \n",
+    "is equal to the product of all the elements of nums except nums[i].\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input:  [1,2,3,4]\n",
+    "Output: [24,12,8,6]\n",
+    "Constraint: It's guaranteed that the product of the elements of any prefix or \n",
+    "suffix of the array (including the whole array) fits in a 32 bit integer.\n",
+    "\n",
+    "Note: Please solve it without division and in O(n).\n",
+    "\n",
+    "Follow up:\n",
+    "Could you solve it with constant space complexity? (The output array does not \n",
+    "count as extra space for the purpose of space complexity analysis.)\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def productExceptSelf(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        if not nums:\n",
+    "            return []\n",
+    "        \n",
+    "        left = [1]*len(nums)\n",
+    "        right = [1]*len(nums)\n",
+    "        \n",
+    "        for i in range(1, len(nums)):\n",
+    "            left[i] = left[i-1] * nums[i-1]\n",
+    "            \n",
+    "        for i in range(len(nums)-2, -1, -1):\n",
+    "            right[i] = right[i+1] * nums[i+1]\n",
+    "            \n",
+    "        return [left[i] * right[i] for i in range(len(left))]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
