--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -1391,6 +1391,199 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 16 - Valid Parenthesis String\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"\"\"\n",
+    "Given a string containing only three types of characters: '(', ')' and '*', write a function to check whether this string is valid. We define the validity of a string by these rules:\n",
+    "\n",
+    "Any left parenthesis '(' must have a corresponding right parenthesis ')'.\n",
+    "Any right parenthesis ')' must have a corresponding left parenthesis '('.\n",
+    "Left parenthesis '(' must go before the corresponding right parenthesis ')'.\n",
+    "'*' could be treated as a single right parenthesis ')' or a single left parenthesis '(' or an empty string.\n",
+    "An empty string is also valid.\n",
+    "Example 1:\n",
+    "Input: \"()\"\n",
+    "Output: True\n",
+    "Example 2:\n",
+    "Input: \"(*)\"\n",
+    "Output: True\n",
+    "Example 3:\n",
+    "Input: \"(*))\"\n",
+    "Output: True\n",
+    "Note:\n",
+    "The string size will be in the range [1, 100].\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def checkValidString(self, s):\n",
+    "        \"\"\"\n",
+    "        :type s: str\n",
+    "        :rtype: bool\n",
+    "        \"\"\"\n",
+    "        if s == '':\n",
+    "            return True\n",
+    "        \n",
+    "        stack = []\n",
+    "        star_stack = []\n",
+    "        \n",
+    "        for i, ch in enumerate(s):\n",
+    "            if ch == '(':\n",
+    "                stack.append(i)\n",
+    "            elif ch == '*':\n",
+    "                star_stack.append(i)\n",
+    "            else:\n",
+    "                if not stack and not star_stack:\n",
+    "                    return False\n",
+    "                if stack:\n",
+    "                    stack.pop()\n",
+    "                else:\n",
+    "                    star_stack.pop()\n",
+    "                    \n",
+    "        while stack and star_stack:\n",
+    "            if stack.pop() > star_stack.pop():\n",
+    "                return False\n",
+    "        \n",
+    "        return len(stack) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 17 - Number of Islands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Given a 2d grid map of '1's (land) and '0's (water), count the number of islands. An island is surrounded by water and is formed by connecting adjacent lands horizontally or vertically. You may assume all four edges of the grid are all surrounded by water.\n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input:\n",
+    "11110\n",
+    "11010\n",
+    "11000\n",
+    "00000\n",
+    "\n",
+    "Output: 1\n",
+    "Example 2:\n",
+    "\n",
+    "Input:\n",
+    "11000\n",
+    "11000\n",
+    "00100\n",
+    "00011\n",
+    "\n",
+    "Output: 3\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "# class Solution(object):\n",
+    "#     def numIslands(self, grid):\n",
+    "#         \"\"\"\n",
+    "#         :type grid: List[List[str]]\n",
+    "#         :rtype: int\n",
+    "#         \"\"\"\n",
+    "#         count = 0\n",
+    "#         for i in range(len(grid)):\n",
+    "#             for j in range(len(grid[0])):\n",
+    "#                 if grid[i][j] == '1':\n",
+    "#                     self.dfs(grid, i, j)\n",
+    "#                     count += 1\n",
+    "#         return count\n",
+    "    \n",
+    "#     def dfs(self, grid, i, j):\n",
+    "#         if i<0 or j<0 or i>=len(grid) or j>=len(grid[0]) or grid[i][j] != '1':\n",
+    "#             return\n",
+    "#         grid[i][j] = '#'\n",
+    "#         self.dfs(grid, i+1, j)\n",
+    "#         self.dfs(grid, i-1, j)\n",
+    "#         self.dfs(grid, i, j+1)\n",
+    "#         self.dfs(grid, i, j-1)\n",
+    "                    \n",
+    "            \n",
+    "class Solution:\n",
+    "    \n",
+    "    def numIslands(self, grid):\n",
+    "        \n",
+    "        if len(grid) < 1:\n",
+    "            return 0\n",
+    "        \n",
+    "        def dfs(r, c):            \n",
+    "            if r<0 or c<0 or r>rows-1 or c>cols-1 or grid[r][c]=='0': \n",
+    "                # Check whether we have reached beyond the edge of the grid or the current cell is '0'. If so, terminate the recursion stack.\n",
+    "                return       \n",
+    "            grid[r][c] = '0'     # Flips all the connected islands to '0's\n",
+    "            \n",
+    "            # DFS in all four directions\n",
+    "            dfs(r-1, c)\n",
+    "            dfs(r+1, c)\n",
+    "            dfs(r, c-1)\n",
+    "            dfs(r, c+1)\n",
+    "                    \n",
+    "        rows = len(grid)\n",
+    "        cols = len(grid[0])\n",
+    "        num_islands = 0\n",
+    "        \n",
+    "        for r in range(rows):\n",
+    "            for c in range(cols):\n",
+    "                cell = grid[r][c]\n",
+    "                \n",
+    "                if cell == '0':\n",
+    "                    continue\n",
+    "                \n",
+    "                if cell == '1':\n",
+    "                    num_islands += 1\n",
+    "                    dfs(r, c)\n",
+    "                                  \n",
+    "        return num_islands     \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
