--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -1596,7 +1596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Minimum Path Sum"
+    "## Day 18 - Minimum Path Sum"
    ]
   },
   {
@@ -1657,12 +1657,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Search in Rotated Sorted Array"
+    "## Day 19 - Search in Rotated Sorted Array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,8 +1691,47 @@
     "\n",
     "\"\"\"\n",
     "\n",
+    "class Solution(object):\n",
+    "    def search(self, nums, target):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :type target: int\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        if not nums:\n",
+    "            return -1\n",
+    "        \n",
+    "        low, high = 0, len(nums)-1\n",
+    "        \n",
+    "        while low <= high:\n",
+    "            mid = (low + high)//2\n",
+    "            if target == nums[mid]:\n",
+    "                return mid\n",
+    "            \n",
+    "            if nums[low] <= nums[mid]:\n",
+    "                if nums[low] <= target <= nums[mid]:\n",
+    "                    high = mid-1\n",
+    "                else:\n",
+    "                    low = mid+1\n",
+    "            else:\n",
+    "                if nums[mid] <= target <= nums[high]:\n",
+    "                    low = mid+1\n",
+    "                else:\n",
+    "                    high = mid-1\n",
+    "                    \n",
+    "        return -1\n",
+    "                \n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
