--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -1732,6 +1732,261 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 20 - Construct Binary Search Tree from Preorder Traversal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "Return the root node of a binary search tree that matches the given preorder traversal.\n",
+    "\n",
+    "(Recall that a binary search tree is a binary tree where for every node, any descendant of node.left has a value < node.val, and any descendant of node.right has a value > node.val.  Also recall that a preorder traversal displays the value of the node first, then traverses node.left, then traverses node.right.)\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: [8,5,1,7,10,12]\n",
+    "Output: [8,5,10,1,7,null,12]\n",
+    "\n",
+    " \n",
+    "\n",
+    "Note: \n",
+    "\n",
+    "1 <= preorder.length <= 100\n",
+    "The values of preorder are distinct.\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode(object):\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.left = None\n",
+    "#         self.right = None\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def bstFromPreorder(self, preorder):\n",
+    "        \"\"\"\n",
+    "        :type preorder: List[int]\n",
+    "        :rtype: TreeNode\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        inorder = sorted(preorder)\n",
+    "        return self.bstFromPreorderandInorder(preorder, inorder)\n",
+    "    \n",
+    "    def bstFromPreorderandInorder(self, preorder, inorder):\n",
+    "        lengthpre = len(preorder)\n",
+    "        lengthin = len(inorder)\n",
+    "        \n",
+    "        if lengthpre != lengthin or preorder == None or inorder == None or lengthpre ==0:\n",
+    "            return None\n",
+    "        root = TreeNode(preorder[0])\n",
+    "        rootindex = inorder.index(root.val)\n",
+    "        \n",
+    "        root.left = self.bstFromPreorderandInorder(preorder[1:rootindex + 1],\n",
+    "                                                  inorder[:rootindex])\n",
+    "        root.right = self.bstFromPreorderandInorder(preorder[rootindex + 1:],\n",
+    "                                                  inorder[rootindex + 1:])\n",
+    "        \n",
+    "        return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 21 - Leftmost Column with at Least a One"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "(This problem is an interactive problem.)\n",
+    "\n",
+    "A binary matrix means that all elements are 0 or 1. For each individual row of the matrix, this row is sorted in non-decreasing order.\n",
+    "\n",
+    "Given a row-sorted binary matrix binaryMatrix, return leftmost column index(0-indexed) with at least a 1 in it. If such index doesn't exist, return -1.\n",
+    "\n",
+    "You can't access the Binary Matrix directly.  You may only access the matrix using a BinaryMatrix interface:\n",
+    "\n",
+    "BinaryMatrix.get(x, y) returns the element of the matrix at index (x, y) (0-indexed).\n",
+    "BinaryMatrix.dimensions() returns a list of 2 elements [n, m], which means the matrix is n * m.\n",
+    "Submissions making more than 1000 calls to BinaryMatrix.get will be judged Wrong Answer.  Also, any solutions that attempt to circumvent the judge will result in disqualification.\n",
+    "\n",
+    "For custom testing purposes you're given the binary matrix mat as input in the following four examples. You will not have access the binary matrix directly.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "\n",
+    "\n",
+    "Input: mat = [[0,0],[1,1]]\n",
+    "Output: 0\n",
+    "Example 2:\n",
+    "\n",
+    "\n",
+    "\n",
+    "Input: mat = [[0,0],[0,1]]\n",
+    "Output: 1\n",
+    "Example 3:\n",
+    "\n",
+    "\n",
+    "\n",
+    "Input: mat = [[0,0],[0,0]]\n",
+    "Output: -1\n",
+    "Example 4:\n",
+    "\n",
+    "\n",
+    "\n",
+    "Input: mat = [[0,0,0,1],[0,0,1,1],[0,1,1,1]]\n",
+    "Output: 1\n",
+    " \n",
+    "\n",
+    "Constraints:\n",
+    "\n",
+    "1 <= mat.length, mat[i].length <= 100\n",
+    "mat[i][j] is either 0 or 1.\n",
+    "mat[i] is sorted in a non-decreasing way.\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "# \"\"\"\n",
+    "# This is BinaryMatrix's API interface.\n",
+    "# You should not implement it, or speculate about its implementation\n",
+    "# \"\"\"\n",
+    "#class BinaryMatrix(object):\n",
+    "#    def get(self, x, y):\n",
+    "#        \"\"\"\n",
+    "#        :type x : int, y : int\n",
+    "#        :rtype int\n",
+    "#        \"\"\"\n",
+    "#\n",
+    "#    def dimensions:\n",
+    "#        \"\"\"\n",
+    "#        :rtype list[]\n",
+    "#        \"\"\"\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def leftMostColumnWithOne(self, binaryMatrix):\n",
+    "        \"\"\"\n",
+    "        :type binaryMatrix: BinaryMatrix\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        rows, cols = binaryMatrix.dimensions()\n",
+    "        \n",
+    "        current_row = 0\n",
+    "        current_col = cols - 1\n",
+    "        \n",
+    "        while current_row < rows and current_col >=0:\n",
+    "            if binaryMatrix.get(current_row, current_col) == 0:\n",
+    "                current_row += 1\n",
+    "            else:\n",
+    "                current_col -= 1\n",
+    "        \n",
+    "        if current_col != cols - 1:\n",
+    "            return current_col + 1\n",
+    "        else:\n",
+    "            return -1\n",
+    "         \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 22 - Subarray Sum Equals K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "Given an array of integers and an integer k, you need to find the total number of continuous subarrays whose sum equals to k.\n",
+    "\n",
+    "Example 1:\n",
+    "Input:nums = [1,1,1], k = 2\n",
+    "Output: 2\n",
+    "Note:\n",
+    "The length of the array is in range [1, 20,000].\n",
+    "The range of numbers in the array is [-1000, 1000] and the range of the integer k is [-1e7, 1e7].\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "class Solution(object):\n",
+    "    def subarraySum(self, nums, k):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :type k: int\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        sumdict = {0:1}\n",
+    "        n = len(nums)\n",
+    "        count = 0\n",
+    "        s = 0\n",
+    "        \n",
+    "        for num in nums:\n",
+    "            s += num\n",
+    "            if s-k in sumdict:\n",
+    "                count += sumdict[s-k]\n",
+    "            if s in sumdict:\n",
+    "                sumdict[s] += 1\n",
+    "            else:\n",
+    "                sumdict[s] = 1\n",
+    "        \n",
+    "        return count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
