--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -1987,6 +1987,67 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 23 - Bitwise AND of Numbers Range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Given a range [m, n] where 0 <= m <= n <= 2147483647, return the bitwise AND of all numbers in this range, inclusive.\n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: [5,7]\n",
+    "Output: 4\n",
+    "Example 2:\n",
+    "\n",
+    "Input: [0,1]\n",
+    "Output: 0\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def rangeBitwiseAnd(self, m, n):\n",
+    "        \"\"\"\n",
+    "        :type m: int\n",
+    "        :type n: int\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        count = 0\n",
+    "        \n",
+    "        while m < n:\n",
+    "            m = m >> 1\n",
+    "            n = n >> 1\n",
+    "            count += 1\n",
+    "        \n",
+    "        return m << count\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
